<resources>
    <string name="app_name">QuizOnTime</string>
    <string name="javatest1">JAVA Test</string>
    <string name="scoredisplay1">Scores</string>
    <string name="ctest1">C-Language Test</string>
    <string name="LRtest">Logical Reasoning Test</string>
    <string name="Aptitude">Aptitude Test</string>
    <string name="login1">Login</string>
    <string name="Cpptest">C++ Test</string>
    <string name="pythontest1">Python Test</string>
    <string name="computertest">Computer Basics Test</string>
    <string name="jstest">JavaScript Test</string>
    <string name="score">Score</string>
    <string name="next">Next</string>
    <string name="prev">Prev</string>
    <string name="java_test">JAVA TEST</string>
    <string name="aptitude">Aptitude</string>
    <string name="button">Button</string>
    <string name="login">Login</string>
    <string name="email_id">Email_id</string>
    <string name="password">Password</string>
    <string name="title">QUIZ ON TIME</string>
    <string name="todo">TODO</string>
    <string name="quiz_over">QUIZ OVER</string>
    <string name="logical_reasoning">Logical Reasoning</string>
    <string name="quiz_on_time">QuizOnTime</string>
    <string name="java">JAVA</string>
    <string name="c_language">C LANGUAGE</string>
    <string name="logical_reasoning_test">Logical Reasoning_Test</string>
    <string name="javascript_test">JAVASCRIPT_TEST</string>
    <string name="computer_basics_test">COMPUTER BASICS_TEST</string>
    <string name="python_test">PYTHON_TEST</string>
    <string name="c_test">C++_TEST</string>
    <string name="submit_te">Submit_Test</string>
    <string name="submit_testmm">Submit_Test</string>
    <string name="submit_testq">Submit_Test</string>
    <string name="enter_que_stions_to_attempt">Enter Questions to Attempt</string>
    <string name="enter_time_limit">Enter Time Limit</string>
    <string name="email">Email_Id</string>
    <string name="logintext">LOGIN</string>
    <string name="registration">Registration</string>
    <string name="already_register_signin_here">Already Register? SignIn here</string>
    <string name="star">***********</string>
    <string name="submitpython">submit</string>
    <string name="about_us">About Us</string>
    <string name="enter_value_less_than_50">Enter value less than 50</string>
</resources>
