<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg1"

    android:layout_height="match_parent"
    tools:context=".Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_weight="1"
            android:background="@drawable/bg"
            android:contentDescription="@string/todo" />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:contentDescription="@string/todo" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/LoyoutInput"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="#FFF"
        android:padding="20dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="400dp">
        <EditText
            android:drawableLeft="@drawable/ic_person_black_24dp"
            android:id="@+id/email"
            android:hint="@string/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:drawableStart="@drawable/ic_person_black_24dp" />
        <EditText
            android:drawableLeft="@drawable/ic_lock_black_24dp"
            android:id="@+id/password"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:hint="@string/star"
            android:drawableStart="@drawable/ic_lock_black_24dp" />
        <Button
            android:background="@drawable/bg"
            android:id="@+id/login"
            android:layout_marginTop="20dp"
            android:text="@string/logintext"
            android:textColor="#ffffff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:background="@drawable/bg"
            android:id="@+id/signup"
            android:layout_marginTop="20dp"
            android:text="@string/registration"
            android:textColor="#ffffff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />



        <TextView
            android:id="@+id/textViewSignUp"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/already_register_signin_here"
            android:textColor="#F000"
            android:textSize="15sp" />



    </LinearLayout>
</RelativeLayout>